2002-10-25  Angus Leeming  <leeming@lyx.org>

	* FormSpellchecker.C (input): fix crash when progress == 0.

2002-10-24  Rob Lahaye  <lahaye@snu.ac.kr>

	* forms/form_print.fd:
	* FormPrint.[Ch]: clean-up, reflecting discussion on the list.

	* forms/form_spellchecker.fd:
	* FormSpellchecker.[Ch]: add tooltips; general clean-up.
	 add word count to dialog and improve progress status;
         implement single Start/Stop button;

	* FormTabular.C (build): rearrange lines tab by tab.
	Use getString not fl_get_inout.

	* FormTexinfo.C: replace View-button by catching double click in
	browser; allow viewing of files, irrespective of full path.

	* forms/form_wrap.fd: resized. Remove text_warning widget. Fix gravity.
	* FormWrap.[Ch]: simplification through the use of RadioButtonGroup
	and CheckedGlueLength. Add tooltips.

2002-10-24  Angus Leeming  <leeming@lyx.org>

	* FormRef.C (updateBrowser): invoke updateHighlight
	(updateHighlight): don't select a browser item if there is no
	reference selected.
	(apply, input): use getString not fl_get_input.

2002-10-23  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* FormExternal.C (apply): 
	(input): fix an off-by-one index (causing a crash)

2002-10-24  Rob Lahaye  <lahaye@snu.ac.kr>

	* FormGraphics.C: use checkedWidgets to ensure that the lengths and
	glue lengths are valid. Improve code documentation and layout.
	InsetGraphicsParams::scale is now a float; modify dialog to suit.

	* FormLog.C (update): more descriptive title and warning messages.

	* FormMathsPanel.C (c-tor): allow dialog to be resized.

	* FormPreamble.C (build): rearrange.
	(apply): use getString, not fl_get_input.

	* FormSearch.C (build): add tooltips.
	(input): use getString, not fl_get_input.

	* FormShowFile.C: more descriptive title.

	* forms/form_browser.fd:
	* forms/form_preamble.fd: reshape.

	* forms/form_graphics.fd: reshape. Remove text_warning widget.

	* forms/form_maths_panel.fd:
	* forms/form_ref.fd: